Fixing the default tags label alignment by changing one character after 2 hours of work. <3 CSS <3

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -299,12 +299,17 @@ section {
           &:before {
             font-size: 1.5em;
             font-family: "FontAwesome";
-            margin-right: 13px;
+            margin-right: 16px;
             font-weight: normal;
             position: relative;
             top: 2px;
             margin-left: -3px;
           }
+
+          &:after {
+            padding-left: 10px;
+          }
+
           &:nth-child(1) {
             &:before {
               content: "\f01c";
